kubernetes/services/infra-workshop/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-workshop
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: infra-workshop-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  tls:
    - hosts:
        - tajiri.she-dev.site
      secretName: infra-workshop-tls
  rules:
    - host: "tajiri.she-dev.site"
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: infra-workshop
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infra-workshop
                port:
                  number: 80
